# CLog

./: .clang-format  CMakeLists.txt  README.md
examples/: Timer.hpp  example1.c  example1.cpp  example2.cpp  example3.c
include/CLog/: CLog.h
src/: CLog.c  CLog.h  Logger.c  Logger.h
